--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -619,6 +619,10 @@ body{
   pointer-events: auto;
 }
 
+.static{
+  position: static;
+}
+
 .fixed{
   position: fixed;
 }
@@ -683,6 +687,16 @@ body{
   grid-column: 1 / -1;
 }
 
+.-mx-1{
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
+}
+
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -709,6 +723,10 @@ body{
 
 .mt-4{
   margin-top: 1rem;
+}
+
+.block{
+  display: block;
 }
 
 .flex{
@@ -755,6 +773,10 @@ body{
   height: 0.75rem;
 }
 
+.h-3\.5{
+  height: 0.875rem;
+}
+
 .h-4{
   height: 1rem;
 }
@@ -779,12 +801,24 @@ body{
   height: 24rem;
 }
 
+.h-\[var\(--radix-select-trigger-height\)\]{
+  height: var(--radix-select-trigger-height);
+}
+
 .h-full{
   height: 100%;
 }
 
+.h-px{
+  height: 1px;
+}
+
 .max-h-60{
   max-height: 15rem;
+}
+
+.max-h-96{
+  max-height: 24rem;
 }
 
 .max-h-screen{
@@ -823,6 +857,10 @@ body{
   width: 0.75rem;
 }
 
+.w-3\.5{
+  width: 0.875rem;
+}
+
 .w-4{
   width: 1rem;
 }
@@ -841,6 +879,14 @@ body{
 
 .w-full{
   width: 100%;
+}
+
+.min-w-\[8rem\]{
+  min-width: 8rem;
+}
+
+.min-w-\[var\(--radix-select-trigger-width\)\]{
+  min-width: var(--radix-select-trigger-width);
 }
 
 .max-w-lg{
@@ -903,6 +949,16 @@ body{
   animation: spin 1s linear infinite;
 }
 
+.cursor-default{
+  cursor: default;
+}
+
+.select-none{
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
 .resize{
   resize: both;
 }
@@ -961,6 +1017,12 @@ body{
 
 .gap-6{
   gap: 1.5rem;
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
@@ -1061,6 +1123,11 @@ body{
   border-color: hsl(var(--destructive));
 }
 
+.border-gray-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
 .border-input{
   border-color: hsl(var(--input));
 }
@@ -1104,6 +1171,10 @@ body{
 
 .bg-muted{
   background-color: hsl(var(--muted));
+}
+
+.bg-popover{
+  background-color: hsl(var(--popover));
 }
 
 .bg-primary{
@@ -1214,6 +1285,10 @@ body{
   padding-left: 2rem;
 }
 
+.pr-2{
+  padding-right: 0.5rem;
+}
+
 .pr-8{
   padding-right: 2rem;
 }
@@ -1317,6 +1392,10 @@ body{
   color: hsl(var(--card-foreground));
 }
 
+.text-current{
+  color: currentColor;
+}
+
 .text-destructive{
   color: hsl(var(--destructive));
 }
@@ -1336,6 +1415,10 @@ body{
 
 .text-muted-foreground{
   color: hsl(var(--muted-foreground));
+}
+
+.text-popover-foreground{
+  color: hsl(var(--popover-foreground));
 }
 
 .text-primary{
@@ -1368,6 +1451,10 @@ body{
   opacity: 0;
 }
 
+.opacity-50{
+  opacity: 0.5;
+}
+
 .opacity-70{
   opacity: 0.7;
 }
@@ -1382,10 +1469,21 @@ body{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .outline{
@@ -1576,6 +1674,14 @@ body{
   border-color: hsl(var(--primary));
 }
 
+.focus\:bg-accent:focus{
+  background-color: hsl(var(--accent));
+}
+
+.focus\:text-accent-foreground:focus{
+  color: hsl(var(--accent-foreground));
+}
+
 .focus\:opacity-100:focus{
   opacity: 1;
 }
@@ -1681,6 +1787,30 @@ body{
   opacity: 0.7;
 }
 
+.data-\[disabled\]\:pointer-events-none[data-disabled]{
+  pointer-events: none;
+}
+
+.data-\[side\=bottom\]\:translate-y-1[data-side="bottom"]{
+  --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.data-\[side\=left\]\:-translate-x-1[data-side="left"]{
+  --tw-translate-x: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.data-\[side\=right\]\:translate-x-1[data-side="right"]{
+  --tw-translate-x: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.data-\[side\=top\]\:-translate-y-1[data-side="top"]{
+  --tw-translate-y: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .data-\[swipe\=cancel\]\:translate-x-0[data-swipe="cancel"]{
   --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1700,6 +1830,10 @@ body{
   background-color: hsl(var(--background));
 }
 
+.data-\[state\=checked\]\:bg-primary[data-state="checked"]{
+  background-color: hsl(var(--primary));
+}
+
 .data-\[state\=open\]\:bg-accent[data-state="open"]{
   background-color: hsl(var(--accent));
 }
@@ -1708,12 +1842,24 @@ body{
   background-color: hsl(var(--muted));
 }
 
+.data-\[placeholder\]\:text-muted-foreground[data-placeholder]{
+  color: hsl(var(--muted-foreground));
+}
+
 .data-\[state\=active\]\:text-foreground[data-state="active"]{
   color: hsl(var(--foreground));
 }
 
+.data-\[state\=checked\]\:text-primary-foreground[data-state="checked"]{
+  color: hsl(var(--primary-foreground));
+}
+
 .data-\[state\=open\]\:text-muted-foreground[data-state="open"]{
   color: hsl(var(--muted-foreground));
+}
+
+.data-\[disabled\]\:opacity-50[data-disabled]{
+  opacity: 0.5;
 }
 
 .data-\[state\=active\]\:shadow-sm[data-state="active"]{
@@ -1774,6 +1920,22 @@ body{
 
 .data-\[state\=open\]\:zoom-in-95[data-state="open"]{
   --tw-enter-scale: .95;
+}
+
+.data-\[side\=bottom\]\:slide-in-from-top-2[data-side="bottom"]{
+  --tw-enter-translate-y: -0.5rem;
+}
+
+.data-\[side\=left\]\:slide-in-from-right-2[data-side="left"]{
+  --tw-enter-translate-x: 0.5rem;
+}
+
+.data-\[side\=right\]\:slide-in-from-left-2[data-side="right"]{
+  --tw-enter-translate-x: -0.5rem;
+}
+
+.data-\[side\=top\]\:slide-in-from-bottom-2[data-side="top"]{
+  --tw-enter-translate-y: 0.5rem;
 }
 
 .data-\[state\=closed\]\:slide-out-to-left-1\/2[data-state="closed"]{
@@ -1874,6 +2036,13 @@ body{
 
 .\[\&\:has\(\[role\=checkbox\]\)\]\:pr-0:has([role=checkbox]){
   padding-right: 0px;
+}
+
+.\[\&\>span\]\:line-clamp-1>span{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 
 .\[\&_tr\:last-child\]\:border-0 tr:last-child{
