--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -5,13 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-<<<<<<< HEAD
-    <script type="module" crossorigin src="/assets/index-C70hR7vW.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-D3Ei2nc5.css">
-=======
-    <script type="module" crossorigin src="/assets/index-AzxlAmGe.js"></script>
+    <script type="module" crossorigin src="/assets/index-wt5ILMK3.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/index-DJDqUN-N.css">
->>>>>>> 25de404317bf60ba80b123aaae68ae430a85e569
   </head>
   <body>
     <div id="root"></div>
