--- a/backend/static/output.css
+++ b/backend/static/output.css
@@ -710,6 +710,10 @@ body{
   margin-bottom: 0.25rem;
 }
 
+.mb-1\.5{
+  margin-bottom: 0.375rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -724,6 +728,10 @@ body{
 
 .ml-1{
   margin-left: 0.25rem;
+}
+
+.mr-1{
+  margin-right: 0.25rem;
 }
 
 .mr-2{
@@ -778,6 +786,10 @@ body{
   aspect-ratio: 16 / 9;
 }
 
+.h-1\.5{
+  height: 0.375rem;
+}
+
 .h-10{
   height: 2.5rem;
 }
@@ -792,6 +804,10 @@ body{
 
 .h-16{
   height: 4rem;
+}
+
+.h-2\.5{
+  height: 0.625rem;
 }
 
 .h-3{
@@ -812,6 +828,10 @@ body{
 
 .h-5{
   height: 1.25rem;
+}
+
+.h-7{
+  height: 1.75rem;
 }
 
 .h-8{
@@ -858,6 +878,10 @@ body{
   max-height: 24rem;
 }
 
+.max-h-\[300px\]{
+  max-height: 300px;
+}
+
 .max-h-screen{
   max-height: 100vh;
 }
@@ -878,12 +902,24 @@ body{
   width: 0px;
 }
 
+.w-1\.5{
+  width: 0.375rem;
+}
+
 .w-10{
   width: 2.5rem;
 }
 
+.w-14{
+  width: 3.5rem;
+}
+
 .w-16{
   width: 4rem;
+}
+
+.w-2\.5{
+  width: 0.625rem;
 }
 
 .w-3{
@@ -902,8 +938,16 @@ body{
   width: 1.25rem;
 }
 
+.w-52{
+  width: 13rem;
+}
+
 .w-64{
   width: 16rem;
+}
+
+.w-7{
+  width: 1.75rem;
 }
 
 .w-8{
@@ -970,6 +1014,16 @@ body{
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+.animate-pulse{
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 @keyframes spin{
@@ -1138,6 +1192,12 @@ body{
   overflow-y: auto;
 }
 
+.truncate{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -1252,6 +1312,11 @@ body{
   background-color: hsl(var(--foreground));
 }
 
+.bg-green-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity, 1));
+}
+
 .bg-green-500{
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
@@ -1296,9 +1361,19 @@ body{
   background-color: transparent;
 }
 
+.bg-yellow-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity, 1));
+}
+
 .bg-yellow-50{
   --tw-bg-opacity: 1;
   background-color: rgb(254 252 232 / var(--tw-bg-opacity, 1));
+}
+
+.bg-yellow-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
 }
 
 .bg-yellow-500\/20{
@@ -1583,6 +1658,11 @@ body{
 .text-green-500{
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity, 1));
+}
+
+.text-green-800{
+  --tw-text-opacity: 1;
+  color: rgb(22 101 52 / var(--tw-text-opacity, 1));
 }
 
 .text-muted-foreground{
@@ -2192,6 +2272,10 @@ body{
     top: auto;
   }
 
+  .sm\:max-w-\[525px\]{
+    max-width: 525px;
+  }
+
   .sm\:max-w-\[600px\]{
     max-width: 600px;
   }
@@ -2251,6 +2335,12 @@ body{
   }
 
   .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
