--- a/backend/static/output.css
+++ b/backend/static/output.css
@@ -866,6 +866,10 @@ body{
   height: 100vh;
 }
 
+.max-h-32{
+  max-height: 8rem;
+}
+
 .max-h-40{
   max-height: 10rem;
 }
@@ -1988,6 +1992,10 @@ body{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-primary:focus{
+  --tw-ring-color: hsl(var(--primary));
 }
 
 .focus\:ring-ring:focus{
