--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/assets/index-C5_ek8lU.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-CsSXc8KI.css">
+    <title>ABRA</title>
+    <script type="module" crossorigin src="/assets/index-DcQOb40h.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-C3SGtNYu.css">
   </head>
   <body>
     <div id="root"></div>
