--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ABRA</title>
-    <script type="module" crossorigin src="/assets/index-DYC2BDVX.js"></script>
+    <script type="module" crossorigin src="/assets/index-DcQOb40h.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/index-C3SGtNYu.css">
   </head>
   <body>
